--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^2.2.4",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "framer-motion": "^10.16.0",
     "react-icons": "^4.11.0",
-    "@emailjs/browser": "^3.11.0",
     "react-intersection-observer": "^9.5.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^1.14.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -32,4 +36,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   }
-} 
+}
