--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^2.2.4",
     "clsx": "^2.0.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.0",
     "next": "^14.0.0",
+    "next-themes": "^0.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.11.0",
